# mad_framework

./: .env.example  .env.template  .gitignore  CLAUDE.md  README.md  mad_framework.yaml  mad_framework_checklist.yaml  pyproject.toml  pytest.ini  requirements.txt
.agent/: state.yaml
.agent/results/: result-001.yaml  result-002.yaml  result-003.yaml  result-analysis-001.yaml  result-analysis-002.yaml  result-analysis-003.yaml  result-opt-001.yaml  result-opt-002.yaml  result-opt-003.yaml  result-poc.yaml
.agent/tasks/: task-001.yaml  task-002.yaml  task-003.yaml  task-004.yaml  task-analysis-001.yaml  (+5 more)
.claude/: mcp-credentials.env.template  settings.json  statusline.py
.debug/: archived-DEBUG-20251221-032954.json  state.json
archive-analyzer/: .dockerignore  CLAUDE.md  Dockerfile.monitor  docker-compose.monitor.yml  docker-compose.nas-sync.yml  pyproject.toml
backend/: requirements.txt
desktop/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: AGENTS_REFERENCE.md  BUILD_TEST.md  CHANGELOG-CLAUDE.md  COMMAND_REFERENCE.md  COMMAND_SELECTOR.md  DAILY_IMPROVEMENT_SYSTEM.md  ENV_SETUP_GUIDE.md  PLANNED_AGENTS.md  PRD-0031-AGENT-CONSOLIDATION.md  PRD-0032-COMMAND-CONSOLIDATION.md  PRD-0033-CLAUDE-CONFIG-OPTIMIZATION.md  PRD-0034-CLAUDE-MD-SEPARATION.md  RESPONSE_STYLE.md  SELECTOR_MANAGEMENT.md
examples/: basic_debate.py  code_review.py  multi_provider.py
frontend/: vitest.config.ts
mad_framework/: CLAUDE.md
tests/: __init__.py  conftest.py
(+246 files in other folders)
